--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>4 Uno Rules You're Playing Wrong</title>
-    <!-- Add link to two style sheets here. -->
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
+  
   <body>
     <header>
       <h1>4 Uno Rules You're Playing Wrong</h1>
